DDP-5676 Add workflow statuses to /status endpoint